parser-generator/OPOLParser.py
# Generated from OPOL.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class OPOLParser ( Parser ):

    grammarFileName = "OPOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'rule_name'", "'triggered_event_device'", "'triggered_event'", 
                     "'trigger_type'", "'state'", "':'", "'('", "')'", "'type'", 
                     "'action_device'", "'action_command'", "'system'", 
                     "'current_time'", "'current_date'", "'=='", "'=>'", 
                     "'='", "'!='", "'>'", "'>='", "'<'", "'<='" ]

    symbolicNames = [ "<INVALID>", "POLICY", "INVARIANT", "SITUATION", "EXPECTATION", 
                      "DESIRE", "EXPECT", "NOT", "ANY", "AND", "OR", "CHECK", 
                      "CONSISTENCY", "ENTAILMENT", "EQUIVALENCE", "BOOLEAN", 
                      "RULE_NAME", "TRIGGERED_EVENT_DEVICE", "TRIGGERED_EVENT", 
                      "TRIGGER_TYPE", "STATE", "COLON", "LPARAN", "RPARAN", 
                      "TYPE", "ACTION_DEVICE", "ACTION_COMMAND", "SYSTEM", 
                      "CURRENT_TIME", "CURRENT_DATE", "EQUIV_SIGN", "ENTAIL_SIGN", 
                      "EQ", "NEQ", "GT", "GTE", "LT", "LTE", "TIME", "DATE", 
                      "UNDERSCORE", "NUMBER", "STRING", "WS", "ErrorChar" ]

    RULE_policy_language = 0
    RULE_policy_statement = 1
    RULE_invariant = 2
    RULE_invariant_body = 3
    RULE_situation_block = 4
    RULE_situation_condition = 5
    RULE_desire_block = 6
    RULE_desire_value = 7
    RULE_expectation_block = 8
    RULE_condition = 9
    RULE_boolean_expression = 10
    RULE_boolean_operator = 11
    RULE_key_name = 12
    RULE_triggered_source_key = 13
    RULE_triggered_event_key = 14
    RULE_device_related_key = 15
    RULE_action_related_key = 16
    RULE_system_related_key = 17
    RULE_date_time_related_key = 18
    RULE_operator = 19
    RULE_value = 20
    RULE_policy_analysis = 21
    RULE_analysis_command = 22
    RULE_analysis_expression = 23
    RULE_analysis_operator = 24

    ruleNames =  [ "policy_language", "policy_statement", "invariant", "invariant_body", 
                   "situation_block", "situation_condition", "desire_block", 
                   "desire_value", "expectation_block", "condition", "boolean_expression", 
                   "boolean_operator", "key_name", "triggered_source_key", 
                   "triggered_event_key", "device_related_key", "action_related_key", 
                   "system_related_key", "date_time_related_key", "operator", 
                   "value", "policy_analysis", "analysis_command", "analysis_expression", 
                   "analysis_operator" ]

    EOF = Token.EOF
    POLICY=1
    INVARIANT=2
    SITUATION=3
    EXPECTATION=4
    DESIRE=5
    EXPECT=6
    NOT=7
    ANY=8
    AND=9
    OR=10
    CHECK=11
    CONSISTENCY=12
    ENTAILMENT=13
    EQUIVALENCE=14
    BOOLEAN=15
    RULE_NAME=16
    TRIGGERED_EVENT_DEVICE=17
    TRIGGERED_EVENT=18
    TRIGGER_TYPE=19
    STATE=20
    COLON=21
    LPARAN=22
    RPARAN=23
    TYPE=24
    ACTION_DEVICE=25
    ACTION_COMMAND=26
    SYSTEM=27
    CURRENT_TIME=28
    CURRENT_DATE=29
    EQUIV_SIGN=30
    ENTAIL_SIGN=31
    EQ=32
    NEQ=33
    GT=34
    GTE=35
    LT=36
    LTE=37
    TIME=38
    DATE=39
    UNDERSCORE=40
    NUMBER=41
    STRING=42
    WS=43
    ErrorChar=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Policy_languageContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(OPOLParser.EOF, 0)

        def policy_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPOLParser.Policy_statementContext)
            else:
                return self.getTypedRuleContext(OPOLParser.Policy_statementContext,i)


        def policy_analysis(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPOLParser.Policy_analysisContext)
            else:
                return self.getTypedRuleContext(OPOLParser.Policy_analysisContext,i)


        def getRuleIndex(self):
            return OPOLParser.RULE_policy_language

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolicy_language" ):
                listener.enterPolicy_language(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolicy_language" ):
                listener.exitPolicy_language(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolicy_language" ):
                return visitor.visitPolicy_language(self)
            else:
                return visitor.visitChildren(self)




    def policy_language(self):

        localctx = OPOLParser.Policy_languageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_policy_language)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 50
                self.policy_statement()
                self.state = 53 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==OPOLParser.POLICY):
                    break

            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==OPOLParser.CHECK:
                self.state = 55
                self.policy_analysis()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.match(OPOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Policy_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POLICY(self):
            return self.getToken(OPOLParser.POLICY, 0)

        def STRING(self):
            return self.getToken(OPOLParser.STRING, 0)

        def COLON(self):
            return self.getToken(OPOLParser.COLON, 0)

        def invariant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPOLParser.InvariantContext)
            else:
                return self.getTypedRuleContext(OPOLParser.InvariantContext,i)


        def getRuleIndex(self):
            return OPOLParser.RULE_policy_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolicy_statement" ):
                listener.enterPolicy_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolicy_statement" ):
                listener.exitPolicy_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolicy_statement" ):
                return visitor.visitPolicy_statement(self)
            else:
                return visitor.visitChildren(self)




    def policy_statement(self):

        localctx = OPOLParser.Policy_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_policy_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(OPOLParser.POLICY)
            self.state = 64
            self.match(OPOLParser.STRING)
            self.state = 65
            self.match(OPOLParser.COLON)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==OPOLParser.INVARIANT:
                self.state = 66
                self.invariant()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InvariantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INVARIANT(self):
            return self.getToken(OPOLParser.INVARIANT, 0)

        def STRING(self):
            return self.getToken(OPOLParser.STRING, 0)

        def COLON(self):
            return self.getToken(OPOLParser.COLON, 0)

        def invariant_body(self):
            return self.getTypedRuleContext(OPOLParser.Invariant_bodyContext,0)


        def getRuleIndex(self):
            return OPOLParser.RULE_invariant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvariant" ):
                listener.enterInvariant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvariant" ):
                listener.exitInvariant(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvariant" ):
                return visitor.visitInvariant(self)
            else:
                return visitor.visitChildren(self)




    def invariant(self):

        localctx = OPOLParser.InvariantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_invariant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(OPOLParser.INVARIANT)
            self.state = 73
            self.match(OPOLParser.STRING)
            self.state = 74
            self.match(OPOLParser.COLON)
            self.state = 75
            self.invariant_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Invariant_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def situation_block(self):
            return self.getTypedRuleContext(OPOLParser.Situation_blockContext,0)


        def desire_block(self):
            return self.getTypedRuleContext(OPOLParser.Desire_blockContext,0)


        def expectation_block(self):
            return self.getTypedRuleContext(OPOLParser.Expectation_blockContext,0)


        def getRuleIndex(self):
            return OPOLParser.RULE_invariant_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvariant_body" ):
                listener.enterInvariant_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvariant_body" ):
                listener.exitInvariant_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvariant_body" ):
                return visitor.visitInvariant_body(self)
            else:
                return visitor.visitChildren(self)




    def invariant_body(self):

        localctx = OPOLParser.Invariant_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_invariant_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.situation_block()
            self.state = 78
            self.desire_block()
            self.state = 79
            self.expectation_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Situation_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SITUATION(self):
            return self.getToken(OPOLParser.SITUATION, 0)

        def COLON(self):
            return self.getToken(OPOLParser.COLON, 0)

        def situation_condition(self):
            return self.getTypedRuleContext(OPOLParser.Situation_conditionContext,0)


        def getRuleIndex(self):
            return OPOLParser.RULE_situation_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSituation_block" ):
                listener.enterSituation_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSituation_block" ):
                listener.exitSituation_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSituation_block" ):
                return visitor.visitSituation_block(self)
            else:
                return visitor.visitChildren(self)




    def situation_block(self):

        localctx = OPOLParser.Situation_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_situation_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(OPOLParser.SITUATION)
            self.state = 82
            self.match(OPOLParser.COLON)
            self.state = 83
            self.situation_condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Situation_conditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ANY(self):
            return self.getToken(OPOLParser.ANY, 0)

        def condition(self):
            return self.getTypedRuleContext(OPOLParser.ConditionContext,0)


        def getRuleIndex(self):
            return OPOLParser.RULE_situation_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSituation_condition" ):
                listener.enterSituation_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSituation_condition" ):
                listener.exitSituation_condition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSituation_condition" ):
                return visitor.visitSituation_condition(self)
            else:
                return visitor.visitChildren(self)




    def situation_condition(self):

        localctx = OPOLParser.Situation_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_situation_condition)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [OPOLParser.ANY]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(OPOLParser.ANY)
                pass
            elif token in [OPOLParser.NOT, OPOLParser.RULE_NAME, OPOLParser.TRIGGERED_EVENT_DEVICE, OPOLParser.TRIGGERED_EVENT, OPOLParser.TRIGGER_TYPE, OPOLParser.STATE, OPOLParser.ACTION_DEVICE, OPOLParser.ACTION_COMMAND, OPOLParser.SYSTEM, OPOLParser.CURRENT_TIME, OPOLParser.CURRENT_DATE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.condition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Desire_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESIRE(self):
            return self.getToken(OPOLParser.DESIRE, 0)

        def COLON(self):
            return self.getToken(OPOLParser.COLON, 0)

        def desire_value(self):
            return self.getTypedRuleContext(OPOLParser.Desire_valueContext,0)


        def getRuleIndex(self):
            return OPOLParser.RULE_desire_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDesire_block" ):
                listener.enterDesire_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDesire_block" ):
                listener.exitDesire_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDesire_block" ):
                return visitor.visitDesire_block(self)
            else:
                return visitor.visitChildren(self)




    def desire_block(self):

        localctx = OPOLParser.Desire_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_desire_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(OPOLParser.DESIRE)
            self.state = 90
            self.match(OPOLParser.COLON)
            self.state = 91
            self.desire_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Desire_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXPECT(self):
            return self.getToken(OPOLParser.EXPECT, 0)

        def NOT(self):
            return self.getToken(OPOLParser.NOT, 0)

        def getRuleIndex(self):
            return OPOLParser.RULE_desire_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDesire_value" ):
                listener.enterDesire_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDesire_value" ):
                listener.exitDesire_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDesire_value" ):
                return visitor.visitDesire_value(self)
            else:
                return visitor.visitChildren(self)




    def desire_value(self):

        localctx = OPOLParser.Desire_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_desire_value)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [OPOLParser.EXPECT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.match(OPOLParser.EXPECT)
                pass
            elif token in [OPOLParser.NOT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(OPOLParser.NOT)
                self.state = 95
                self.match(OPOLParser.EXPECT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expectation_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXPECTATION(self):
            return self.getToken(OPOLParser.EXPECTATION, 0)

        def COLON(self):
            return self.getToken(OPOLParser.COLON, 0)

        def condition(self):
            return self.getTypedRuleContext(OPOLParser.ConditionContext,0)


        def getRuleIndex(self):
            return OPOLParser.RULE_expectation_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpectation_block" ):
                listener.enterExpectation_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpectation_block" ):
                listener.exitExpectation_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpectation_block" ):
                return visitor.visitExpectation_block(self)
            else:
                return visitor.visitChildren(self)




    def expectation_block(self):

        localctx = OPOLParser.Expectation_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expectation_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(OPOLParser.EXPECTATION)
            self.state = 99
            self.match(OPOLParser.COLON)
            self.state = 100
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolean_expression(self):
            return self.getTypedRuleContext(OPOLParser.Boolean_expressionContext,0)


        def getRuleIndex(self):
            return OPOLParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = OPOLParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.boolean_expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Boolean_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def key_name(self):
            return self.getTypedRuleContext(OPOLParser.Key_nameContext,0)


        def operator(self):
            return self.getTypedRuleContext(OPOLParser.OperatorContext,0)


        def value(self):
            return self.getTypedRuleContext(OPOLParser.ValueContext,0)


        def NOT(self):
            return self.getToken(OPOLParser.NOT, 0)

        def boolean_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPOLParser.Boolean_expressionContext)
            else:
                return self.getTypedRuleContext(OPOLParser.Boolean_expressionContext,i)


        def boolean_operator(self):
            return self.getTypedRuleContext(OPOLParser.Boolean_operatorContext,0)


        def getRuleIndex(self):
            return OPOLParser.RULE_boolean_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean_expression" ):
                listener.enterBoolean_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean_expression" ):
                listener.exitBoolean_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean_expression" ):
                return visitor.visitBoolean_expression(self)
            else:
                return visitor.visitChildren(self)



    def boolean_expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = OPOLParser.Boolean_expressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_boolean_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [OPOLParser.RULE_NAME, OPOLParser.TRIGGERED_EVENT_DEVICE, OPOLParser.TRIGGERED_EVENT, OPOLParser.TRIGGER_TYPE, OPOLParser.STATE, OPOLParser.ACTION_DEVICE, OPOLParser.ACTION_COMMAND, OPOLParser.SYSTEM, OPOLParser.CURRENT_TIME, OPOLParser.CURRENT_DATE]:
                self.state = 105
                self.key_name()
                self.state = 106
                self.operator()
                self.state = 107
                self.value()
                pass
            elif token in [OPOLParser.NOT]:
                self.state = 109
                self.match(OPOLParser.NOT)
                self.state = 110
                self.boolean_expression(2)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 119
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = OPOLParser.Boolean_expressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_boolean_expression)
                    self.state = 113
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 114
                    self.boolean_operator()
                    self.state = 115
                    self.boolean_expression(2) 
                self.state = 121
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Boolean_operatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AND(self):
            return self.getToken(OPOLParser.AND, 0)

        def OR(self):
            return self.getToken(OPOLParser.OR, 0)

        def getRuleIndex(self):
            return OPOLParser.RULE_boolean_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean_operator" ):
                listener.enterBoolean_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean_operator" ):
                listener.exitBoolean_operator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean_operator" ):
                return visitor.visitBoolean_operator(self)
            else:
                return visitor.visitChildren(self)




    def boolean_operator(self):

        localctx = OPOLParser.Boolean_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_boolean_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            _la = self._input.LA(1)
            if not(_la==OPOLParser.AND or _la==OPOLParser.OR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Key_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def triggered_source_key(self):
            return self.getTypedRuleContext(OPOLParser.Triggered_source_keyContext,0)


        def triggered_event_key(self):
            return self.getTypedRuleContext(OPOLParser.Triggered_event_keyContext,0)


        def device_related_key(self):
            return self.getTypedRuleContext(OPOLParser.Device_related_keyContext,0)


        def action_related_key(self):
            return self.getTypedRuleContext(OPOLParser.Action_related_keyContext,0)


        def system_related_key(self):
            return self.getTypedRuleContext(OPOLParser.System_related_keyContext,0)


        def date_time_related_key(self):
            return self.getTypedRuleContext(OPOLParser.Date_time_related_keyContext,0)


        def getRuleIndex(self):
            return OPOLParser.RULE_key_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKey_name" ):
                listener.enterKey_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKey_name" ):
                listener.exitKey_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKey_name" ):
                return visitor.visitKey_name(self)
            else:
                return visitor.visitChildren(self)




    def key_name(self):
